--- a/website/css/main.css
+++ b/website/css/main.css
@@ -40,8 +40,8 @@ body {
 }
 
 .container {
-    max-width: 800px;
-    margin: 50px auto;
+    max-width: 100%;
+    margin: 0px auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
