--- a/website/css/carousel.css
+++ b/website/css/carousel.css
@@ -19,3 +19,24 @@
 .carousel-slide img.active {
     opacity: 1;
 }
+
+.carousel-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10; /* This ensures the overlay is above the images */
+    display: flex;
+    justify-content: center; /* Horizontally center the text/content */
+    align-items: center;     /* Vertically center the text/content */
+    pointer-events: none;    /* This ensures any click will pass through the overlay */
+}
+
+.carousel-overlay p {
+    color: #FFF9D7; /* Change this to fit your design */
+    font-size: 24px; 
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
+}
