--- a/website/css/main.css
+++ b/website/css/main.css
@@ -14,6 +14,15 @@ body, html {
     flex-direction: column;
     min-height: 100%;
 }
+footer {
+    text-align: center;
+  }
+  footer {
+    border-top: 1px solid #ccc;
+  }  
+  footer {
+    color: #666;
+  }
 
 .container {
     flex: 1;
@@ -104,3 +113,67 @@ iframe {
     position: relative; /* To contain the slides */
     margin-bottom: 50px; /* Add spacing below carousel */
 }
+.package-box {
+    float: left;
+    width: 50%;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .package-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .package-info {
+    padding: 20px;
+  }
+  
+  .package-info h2 {
+    font-size: 24px;
+    margin-top: 0;
+  }
+  
+  .package-info p {
+    margin-top: 10px;
+  }
+  
+  .package-info ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+  }
+  
+  .package-info li {
+    margin-bottom: 5px;
+  }
+  
+  .package-button {
+    background-color: #8FC391; 
+    color: #FFF9D7; 
+    border: none;
+    border-radius: 3px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .package-button:hover {
+    background-color: #9E9FCF; 
+  }
+    .person {
+        width: 300px;
+        margin: 0 auto;
+      }
+      
+      .person img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      }
+      
+      .person p {
+        font-size: 16px;
+        line-height: 1.5;
+      }
