--- a/website/css/main.css
+++ b/website/css/main.css
@@ -114,7 +114,6 @@ iframe {
     margin-bottom: 50px; /* Add spacing below carousel */
 }
 .package-box {
-    float: left;
     width: 50%;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -129,6 +128,8 @@ iframe {
   
   .package-info {
     padding: 20px;
+    display: inline-block;
+  
   }
   
   .package-info h2 {
@@ -162,18 +163,21 @@ iframe {
   .package-button:hover {
     background-color: #9E9FCF; 
   }
-    .person {
-        width: 300px;
-        margin: 0 auto;
-      }
-      
-      .person img {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-      }
-      
-      .person p {
-        font-size: 16px;
-        line-height: 1.5;
-      }
+.person {
+    width: 300px;
+    margin: 0 auto;
+  }
+  
+  .person img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    display: block;
+    border-radius: 100%; 
+
+  }
+  
+  .person p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
